imp sync stock with bulkextentions

--- a/src/StockShare.Services/StockShare.Services.csproj
+++ b/src/StockShare.Services/StockShare.Services.csproj
@@ -7,18 +7,27 @@
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <NoWarn>$(NoWarn);1591;SA1625</NoWarn>
+    <NoWarn>$(NoWarn);1591;SA1625;SA1123;SA1005</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="C:\Users\huisky\.nuget\packages\jojo.fundamental.codestyle\0.1.5\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="EFCore.BulkExtensions" Version="6.5.6" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\StockShare.Data\StockShare.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Enum\" />
   </ItemGroup>
 
 </Project>
