--- a/src/StockShare/Configs/appsettings.Development.json
+++ b/src/StockShare/Configs/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "StockShareContext": "Server=127.0.0.1;Port=13306;User Id=root;Password=Abc123;Database=StockShare;Charset=utf8mb4;",
+    "StockShareContext": "Server=127.0.0.1;Port=13306;User Id=root;Password=Abc123;Database=StockShare;Charset=utf8mb4;AllowLoadLocalInfile=true ",
     "Redis": "redis:6379,password=Abc123"
   },
   "GlobalStrings": {
